Add README and project formatting

--- a/register.html
+++ b/register.html
@@ -1,52 +1,74 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Styles Conference</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin">
-</head>
+    <link rel="stylesheet" href="assets/stylesheets/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin"
+    />
+  </head>
 
-<body>
-  <header class="primary-header container group">
-    <h1 class="logo">
-        <a href="index.html">Styles <br> Conference</a>
-    </h1>
-    <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
+  <body>
+    <header class="primary-header container group">
+      <h1 class="logo">
+        <a href="index.html"
+          >Styles <br />
+          Conference</a
+        >
+      </h1>
+      <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
-    <nav class="nav primary-nav">
+      <nav class="nav primary-nav">
         <ul>
-            <li><a href="index.html">Головна</a></li><!--
-            --><li><a href="speakers.html">Спікери</a></li><!--
-            --><li><a href="schedule.html">Розклад</a></li><!--
-            --><li><a href="venue.html">Місце проведення</a></li><!--
-            --><li><a href="register.html">Реєстрація</a></li>
+          <li><a href="index.html">Головна</a></li>
+          <!--
+            -->
+          <li><a href="speakers.html">Спікери</a></li>
+          <!--
+            -->
+          <li><a href="schedule.html">Розклад</a></li>
+          <!--
+            -->
+          <li><a href="venue.html">Місце проведення</a></li>
+          <!--
+            -->
+          <li><a href="register.html">Реєстрація</a></li>
         </ul>
-    </nav>
+      </nav>
 
-    <section class="row-alt">
+      <section class="row-alt">
         <div class="lead container">
-            <h1>Реєстрація</h1>
-            <p>Щороку ми прагнемо неймовірно провести час
-                і в цьому році ми хотіли б щоб ви приєдналися до нас.
-                Вхід на конференцію коштує всього лише 99$ і це одна
-                з кращих інвестицій у ваші знання.</p>
+          <h1>Реєстрація</h1>
+          <p>
+            Щороку ми прагнемо неймовірно провести час і в цьому році ми хотіли
+            б щоб ви приєдналися до нас. Вхід на конференцію коштує всього лише
+            99$ і це одна з кращих інвестицій у ваші знання.
+          </p>
         </div>
-    </section>
-  </header>
+      </section>
+    </header>
 
-  <footer class="primary-footer container group">
-    <small>&copy; Styles Conference</small>
-    <nav class="nav">
+    <footer class="primary-footer container group">
+      <small>&copy; Styles Conference</small>
+      <nav class="nav">
         <ul>
-            <li><a href="index.html">Головна</a></li><!--
-			      --><li><a href="speakers.html">Спікери</a></li><!--
-			      --><li><a href="schedule.html">Розклад</a></li><!--
-			      --><li><a href="venue.html">Місце проведення</a></li><!--
-			      --><li><a href="register.html">Реєстрація</a></li>
+          <li><a href="index.html">Головна</a></li>
+          <!--
+			      -->
+          <li><a href="speakers.html">Спікери</a></li>
+          <!--
+			      -->
+          <li><a href="schedule.html">Розклад</a></li>
+          <!--
+			      -->
+          <li><a href="venue.html">Місце проведення</a></li>
+          <!--
+			      -->
+          <li><a href="register.html">Реєстрація</a></li>
         </ul>
-    </nav>
-  </footer>
-
-</body>
+      </nav>
+    </footer>
+  </body>
 </html>
