--- a/speakers.html
+++ b/speakers.html
@@ -1,135 +1,170 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Styles Conference</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin">
-</head>
+    <link rel="stylesheet" href="assets/stylesheets/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin"
+    />
+  </head>
 
-<body>
-<header class="primary-header container group">
-    <h1 class="logo">
-        <a href="index.html">Styles <br> Conference</a>
-    </h1>
-    <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
+  <body>
+    <header class="primary-header container group">
+      <h1 class="logo">
+        <a href="index.html"
+          >Styles <br />
+          Conference</a
+        >
+      </h1>
+      <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
-    <nav class="nav primary-nav">
+      <nav class="nav primary-nav">
         <ul>
-            <li><a href="index.html">Головна</a></li><!--
-            --><li><a href="speakers.html">Спікери</a></li><!--
-            --><li><a href="schedule.html">Розклад</a></li><!--
-            --><li><a href="venue.html">Місце проведення</a></li><!--
-            --><li><a href="register.html">Реєстрація</a></li>
+          <li><a href="index.html">Головна</a></li>
+          <!--
+            -->
+          <li><a href="speakers.html">Спікери</a></li>
+          <!--
+            -->
+          <li><a href="schedule.html">Розклад</a></li>
+          <!--
+            -->
+          <li><a href="venue.html">Місце проведення</a></li>
+          <!--
+            -->
+          <li><a href="register.html">Реєстрація</a></li>
         </ul>
-    </nav>
+      </nav>
 
-
-    <section class="row-alt">
+      <section class="row-alt">
         <div class="lead container">
-            <h1>Спікери</h1>
-            <p>Ми раді вітати більше двадцяти спікерів,
-                готових представити новітні технології
-                в галузі. Готуйтесь до феєрії.</p>
+          <h1>Спікери</h1>
+          <p>
+            Ми раді вітати більше двадцяти спікерів, готових представити новітні
+            технології в галузі. Готуйтесь до феєрії.
+          </p>
         </div>
-    </section>
+      </section>
 
-    <section class="row">
+      <section class="row">
         <div class="grid">
+          <section class="speaker" id="chris-mills">
+            <div class="col-2-3">
+              <h2>Кріс Мілс</h2>
+              <h5>Хеві-метал кодинг</h5>
 
-            <section class="speaker" id="chris-mills">
+              <p>
+                У цій нетрадиційній розмові Кріс Мілс буде заохочувати вас взяти
+                барабанні палички на додаток до ноутбука і вибивати ритм
+                навчання - і коду і барабанів! Ви дізнаєтеся основи JavaScript і
+                CSS, а також про барабанні патерни хеві-метала. Цей шлюб
+                укладений на небесах і немає кращої протиотрути від розчарування
+                коду, ніж вибивання семи відтінків ***** на барабанній
+                установці.
+              </p>
 
-                <div class="col-2-3">
+              <h5>Про спікера</h5>
 
-                    <h2>Кріс Мілс</h2>
-                    <h5>Хеві-метал кодинг</h5>
+              <p>
+                Кріс Мілс, старший технічний розробник в Mozilla, де він пише
+                документацію і демонстрації про відкриті веб-додатки, Firefox OS
+                і пов'язані з ними теми. Він любить майструвати на HTML, CSS,
+                JavaScript та інших веб-технологіях і зрідка виступає на
+                конференціях і в університетах.
+              </p>
+            </div>
+            <!--
 
-                    <p>У цій нетрадиційній розмові Кріс Мілс буде заохочувати вас
-                        взяти барабанні палички на додаток до ноутбука і вибивати
-                        ритм навчання - і коду і барабанів! Ви дізнаєтеся основи
-                        JavaScript і CSS, а також про барабанні патерни хеві-метала.
-                        Цей шлюб укладений на небесах і немає кращої протиотрути від
-                        розчарування коду, ніж вибивання семи відтінків ***** на
-                        барабанній установці.</p>
+        -->
+            <aside class="col-1-3">
+              <div class="speaker-info">
+                <img
+                  src="assets/images/speakers/chris-mills.jpg"
+                  alt="Chris Mills"
+                />
 
-                    <h5>Про спікера</h5>
-
-                    <p>Кріс Мілс, старший технічний розробник в Mozilla,
-                        де він пише документацію і демонстрації про відкриті веб-додатки,
-                        Firefox OS і пов'язані з ними теми. Він любить майструвати на HTML,
-                        CSS, JavaScript та інших веб-технологіях і зрідка виступає на конференціях
-                        і в університетах.</p>
-
-                </div><!--
-
-        --><aside class="col-1-3">
-                <div class="speaker-info">
-
-                    <img src="assets/images/speakers/chris-mills.jpg" alt="Chris Mills">
-
-                    <ul>
-                        <li><a href="https://twitter.com/chrisdavidmills">@chrisdavidmills</a></li>
-                        <li><a href="https://developer.mozilla.org/">developer.mozilla.org</a></li>
-                    </ul>
-
-                </div>
+                <ul>
+                  <li>
+                    <a href="https://twitter.com/chrisdavidmills"
+                      >@chrisdavidmills</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://developer.mozilla.org/"
+                      >developer.mozilla.org</a
+                    >
+                  </li>
+                </ul>
+              </div>
             </aside>
+          </section>
 
-            </section>
+          <section class="speaker" id="shay-howe">
+            <div class="col-2-3">
+              <h2>Шей Хоу</h2>
+              <h5>Краще менше, та краще: як обмеження культивують зростання</h5>
 
-            <section class="speaker" id="shay-howe">
+              <p>
+                Встановлюючи обмеження, ми змушуємо себе бути більш
+                продуктивними. Вони допомагають нам приймати рішення,
+                зосереджуючись на проблемі, яку ми намагаємося вирішити. Вони
+                покращують нашу цілісність, яка забезпечує кращий досвід для
+                наших користувачів. І вони допомагають нам зростати - цінний
+                актив за часів інновацій.
+              </p>
 
-                <div class="col-2-3">
+              <h5>Про спікера</h5>
 
-                    <h2>Шей Хоу</h2>
-                    <h5>Краще менше, та краще: як обмеження культивують зростання</h5>
+              <p>
+                Як дизайнер і фронтенд-розробник, Шей Хоу відчуває пристрасть до
+                вирішення проблем при створенні творчих і інтуїтивних продуктів.
+                Шей спеціалізується на дизайні і розробці інтерфейсу.
+              </p>
+            </div>
+            <!--
 
-                    <p>Встановлюючи обмеження, ми змушуємо себе бути більш продуктивними.
-                        Вони допомагають нам приймати рішення, зосереджуючись на проблемі,
-                        яку ми намагаємося вирішити. Вони покращують нашу цілісність, яка
-                        забезпечує кращий досвід для наших користувачів. І вони допомагають
-                        нам зростати - цінний актив за часів інновацій.</p>
+        -->
+            <aside class="col-1-3">
+              <div class="speaker-info">
+                <img
+                  src="assets/images/speakers/shay-howe.jpg"
+                  alt="Shay Howe"
+                />
 
-                    <h5>Про спікера</h5>
-
-                    <p>Як дизайнер і фронтенд-розробник, Шей Хоу відчуває пристрасть до вирішення
-                        проблем при створенні творчих і інтуїтивних продуктів. Шей спеціалізується
-                        на дизайні і розробці інтерфейсу.</p>
-
-                </div><!--
-
-        --><aside class="col-1-3">
-                <div class="speaker-info">
-
-                    <img src="assets/images/speakers/shay-howe.jpg" alt="Shay Howe">
-
-                    <ul>
-                        <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
-                        <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
-                    </ul>
-
-                </div>
+                <ul>
+                  <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
+                  <li>
+                    <a href="http://learn.shayhowe.com/">learn.shayhowe.com</a>
+                  </li>
+                </ul>
+              </div>
             </aside>
-
-            </section>
-
+          </section>
         </div>
-    </section>
-</header>
+      </section>
+    </header>
 
-<footer class="primary-footer container group">
-    <small>&copy; Styles Conference</small>
-    <nav class="nav">
+    <footer class="primary-footer container group">
+      <small>&copy; Styles Conference</small>
+      <nav class="nav">
         <ul>
-            <li><a href="index.html">Головна</a></li><!--
-            --><li><a href="speakers.html">Спікери</a></li><!--
-            --><li><a href="schedule.html">Розклад</a></li><!--
-            --><li><a href="venue.html">Місце проведення</a></li><!--
-            --><li><a href="register.html">Реєстрація</a></li>
+          <li><a href="index.html">Головна</a></li>
+          <!--
+            -->
+          <li><a href="speakers.html">Спікери</a></li>
+          <!--
+            -->
+          <li><a href="schedule.html">Розклад</a></li>
+          <!--
+            -->
+          <li><a href="venue.html">Місце проведення</a></li>
+          <!--
+            -->
+          <li><a href="register.html">Реєстрація</a></li>
         </ul>
-    </nav>
-</footer>
-
-</body>
-
+      </nav>
+    </footer>
+  </body>
 </html>
