--- a/index.html
+++ b/index.html
@@ -1,93 +1,129 @@
 ﻿<!DOCTYPE html>
 <html lang="ua">
-<head>
-    <meta charset="utf-8">
-    	<title>Styles Conference</title>
-		<link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Styles Conference</title>
+    <link rel="stylesheet" href="assets/stylesheets/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin"
+    />
+  </head>
+  <body>
+    <header class="primary-header container group">
+      <h1 class="logo">
+        <a href="index.html"
+          >Styles <br />
+          Conference</a
+        >
+      </h1>
 
-<header class="primary-header container group">
-        <h1 class="logo">
-            <a href="index.html">Styles <br> Conference</a>
-        </h1>
+      <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
-    <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
+      <nav class="nav primary-nav">
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <!--
+        -->
+          <li><a href="speakers.html">Спікери</a></li>
+          <!--
+        -->
+          <li><a href="schedule.html">Розклад</a></li>
+          <!--
+        -->
+          <li><a href="venue.html">Місце проведення</a></li>
+          <!--
+        -->
+          <li><a href="register.html">Реєстрація</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <nav class="nav primary-nav">
-      <ul>
-        <li><a href="index.html">Головна</a></li><!--
-        --><li><a href="speakers.html">Спікери</a></li><!--
-        --><li><a href="schedule.html">Розклад</a></li><!--
-        --><li><a href="venue.html">Місце проведення</a></li><!--
-        --><li><a href="register.html">Реєстрація</a></li>
-      </ul>
-    </nav>
-</header>
+    <section class="hero container">
+      <h2>Присвячується розробці веб-сайтів</h2>
+      <p>
+        Щороку найуспішніші веб-дизайнери та фронтенд-розробники збираються в
+        Чикаго, щоб обговорити новітні технології. Приєднуйся до нас у серпні
+        цього року!
+      </p>
+      <a class="btn btn-alt" href="register.html">Зареєструйтесь зараз</a>
+    </section>
 
-<section class="hero container">
-    <h2>Присвячується розробці веб-сайтів</h2>
-    <p>Щороку найуспішніші веб-дизайнери та
-				фронтенд-розробники збираються в Чикаго,
-				щоб обговорити новітні технології.
-				Приєднуйся до нас у серпні цього року!</p>
-    <a class="btn btn-alt" href="register.html">Зареєструйтесь зараз</a>
-</section>
+    <section class="row">
+      <div class="grid">
+        <!-- Спікери -->
 
-  <section class="row">
-    <div class="grid">
-
-      <!-- Спікери -->
-
-      <section class="teaser col-1-3">
-        <a href="speakers.html">
-          <img src="assets/images/home/speakers.jpg" alt="Професійні спікери">
+        <section class="teaser col-1-3">
+          <a href="speakers.html">
+            <img
+              src="assets/images/home/speakers.jpg"
+              alt="Професійні спікери"
+            />
             <h5>Спікери</h5>
             <h3>Спікери світового рівня</h3>
-        </a>
-        <p>До нас приїде більше двадцяти професійних спікерів
-					з усього світу, щоб поділитися своїм досвідом</p>
-        </section><!--
+          </a>
+          <p>
+            До нас приїде більше двадцяти професійних спікерів з усього світу,
+            щоб поділитися своїм досвідом
+          </p>
+        </section>
+        <!--
 
         Розклад
 
-        --><section class="teaser col-1-3">
-        <a href="schedule.html">
-          <img src="assets/images/home/schedule.jpg" alt="Учасники конференції">
+        -->
+        <section class="teaser col-1-3">
+          <a href="schedule.html">
+            <img
+              src="assets/images/home/schedule.jpg"
+              alt="Учасники конференції"
+            />
             <h5>Розклад</h5>
             <h3>Три незабутніх дні спілкування</h3>
-        </a>
-        <p>Насолоджуйтесь трьома надихаючими і насиченими
-            подіями днями спікінгів, зустрічей та інших подій</p>
-        </section><!--
+          </a>
+          <p>
+            Насолоджуйтесь трьома надихаючими і насиченими подіями днями
+            спікінгів, зустрічей та інших подій
+          </p>
+        </section>
+        <!--
 
         Місце проведення
 
-        --><section class="teaser col-1-3">
-        <a href="venue.html">
-          <img src="assets/images/home/venue.jpg" alt="Театр Чикаго">
+        -->
+        <section class="teaser col-1-3">
+          <a href="venue.html">
+            <img src="assets/images/home/venue.jpg" alt="Театр Чикаго" />
             <h5>Місце проведення</h5>
             <h3>Театр Чикаго</h3>
-        </a>
-        <p>Театр Чикаго, в самому центрі міста, &#8212;
-            чудове місце проведення конференції</p>
+          </a>
+          <p>
+            Театр Чикаго, в самому центрі міста, &#8212; чудове місце проведення
+            конференції
+          </p>
         </section>
-    </div>
-  </section>
+      </div>
+    </section>
 
-<footer class="primary-footer container group">
-    <small>&copy; Styles Conference</small>
-		<nav class="nav">
-			<ul>
-        <li><a href="index.html">Головна</a></li><!--
-			  --><li><a href="speakers.html">Спікери</a></li><!--
-			  --><li><a href="schedule.html">Розклад</a></li><!--
-			  --><li><a href="venue.html">Місце проведення</a></li><!--
-			  --><li><a href="register.html">Реєстрація</a></li>
-      </ul>
-		</nav>
-	</footer>
-
-</body>
+    <footer class="primary-footer container group">
+      <small>&copy; Styles Conference</small>
+      <nav class="nav">
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <!--
+			  -->
+          <li><a href="speakers.html">Спікери</a></li>
+          <!--
+			  -->
+          <li><a href="schedule.html">Розклад</a></li>
+          <!--
+			  -->
+          <li><a href="venue.html">Місце проведення</a></li>
+          <!--
+			  -->
+          <li><a href="register.html">Реєстрація</a></li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
 </html>
