--- a/venue.html
+++ b/venue.html
@@ -1,51 +1,74 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Styles Conference</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin">
-</head>
+    <link rel="stylesheet" href="assets/stylesheets/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin"
+    />
+  </head>
 
-<body>
+  <body>
     <header class="primary-header container group">
-        <h1 class="logo">
-            <a href="index.html">Styles <br> Conference</a>
-        </h1>
-        <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
+      <h1 class="logo">
+        <a href="index.html"
+          >Styles <br />
+          Conference</a
+        >
+      </h1>
+      <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
-        <nav class="nav primary-nav">
-            <ul>
-                <li><a href="index.html">Головна</a></li><!--
-                --><li><a href="speakers.html">Спікери</a></li><!--
-                --><li><a href="schedule.html">Розклад</a></li><!--
-                --><li><a href="venue.html">Місце проведення</a></li><!--
-                --><li><a href="register.html">Реєстрація</a></li>
-            </ul>
-        </nav>
+      <nav class="nav primary-nav">
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <!--
+                -->
+          <li><a href="speakers.html">Спікери</a></li>
+          <!--
+                -->
+          <li><a href="schedule.html">Розклад</a></li>
+          <!--
+                -->
+          <li><a href="venue.html">Місце проведення</a></li>
+          <!--
+                -->
+          <li><a href="register.html">Реєстрація</a></li>
+        </ul>
+      </nav>
 
-        <section class="row-alt">
-            <div class="lead container">
-                <h1>Місце проведення</h1>
-                <p>Конференція відбудеться в театрі Чикаго - красивій історичній
-                пам'ятці архітектури. Готель для учасників конференції розташований
-                у декількох хвилинах ходьби вниз по Стейт-Стріт.</p>
-            </div>
-        </section>
+      <section class="row-alt">
+        <div class="lead container">
+          <h1>Місце проведення</h1>
+          <p>
+            Конференція відбудеться в театрі Чикаго - красивій історичній
+            пам'ятці архітектури. Готель для учасників конференції розташований
+            у декількох хвилинах ходьби вниз по Стейт-Стріт.
+          </p>
+        </div>
+      </section>
     </header>
 
     <footer class="primary-footer container group">
-        <small>&copy; Styles Conference</small>
-        <nav class="nav">
-            <ul>
-             <li><a href="index.html">Головна</a></li><!--
-			          --><li><a href="speakers.html">Спікери</a></li><!--
-			          --><li><a href="schedule.html">Розклад</a></li><!--
-			          --><li><a href="venue.html">Місце проведення</a></li><!--
-			          --><li><a href="register.html">Реєстрація</a></li>
-            </ul>
-        </nav>
+      <small>&copy; Styles Conference</small>
+      <nav class="nav">
+        <ul>
+          <li><a href="index.html">Головна</a></li>
+          <!--
+			          -->
+          <li><a href="speakers.html">Спікери</a></li>
+          <!--
+			          -->
+          <li><a href="schedule.html">Розклад</a></li>
+          <!--
+			          -->
+          <li><a href="venue.html">Місце проведення</a></li>
+          <!--
+			          -->
+          <li><a href="register.html">Реєстрація</a></li>
+        </ul>
+      </nav>
     </footer>
-
-</body>
+  </body>
 </html>
